--- a/RoomBookingSysytem1/RoomBookingSysytem1.csproj
+++ b/RoomBookingSysytem1/RoomBookingSysytem1.csproj
@@ -129,9 +129,9 @@
     </Compile>
     <Compile Include="Models\AddRoomModel.cs" />
     <Compile Include="Models\ChangePasswordModel.cs" />
-    <Compile Include="Models\SignupModel.cs" />
+    <Compile Include="Models\ClientModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Service\SignupDAL.cs" />
+    <Compile Include="Service\AccountsService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-grid.css" />
@@ -198,10 +198,8 @@
     <Content Include="Views\Client\CancelBooking.cshtml" />
     <Content Include="Views\Client\BookingDetails.cshtml" />
     <Content Include="Views\Client\EditProfile.cshtml" />
-    <Content Include="Views\Accounts\Signup.cshtml" />
     <Content Include="Views\Client\ChangePassword.cshtml" />
     <Content Include="Views\Client\Index.cshtml" />
-    <Content Include="Views\Accounts\Signin.cshtml" />
     <Content Include="Views\Shared\_AdminLayout.cshtml" />
     <Content Include="Views\Admin\Index.cshtml" />
     <Content Include="Views\Admin\ManageRoom.cshtml" />
@@ -209,6 +207,8 @@
     <Content Include="Views\Admin\NewAdmin.cshtml" />
     <Content Include="Views\Admin\ChangeAdminPass.cshtml" />
     <Content Include="Views\Admin\AddRoom.cshtml" />
+    <Content Include="Views\Accounts\Signup.cshtml" />
+    <Content Include="Views\Accounts\Signin.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
