--- a/RoomBookingSysytem1/RoomBookingSysytem1.csproj
+++ b/RoomBookingSysytem1/RoomBookingSysytem1.csproj
@@ -132,6 +132,7 @@
     <Compile Include="Models\ClientModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\AccountsService.cs" />
+    <Compile Include="Service\ClientService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-grid.css" />
