--- a/RoomBookingSysytem1/RoomBookingSysytem1.csproj
+++ b/RoomBookingSysytem1/RoomBookingSysytem1.csproj
@@ -134,6 +134,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scripts\Class1.cs" />
     <Compile Include="Service\AccountsService.cs" />
+    <Compile Include="Service\AddRoomService.cs" />
     <Compile Include="Service\ClientService.cs" />
   </ItemGroup>
   <ItemGroup>
