--- a/RoomBookingSysytem1/RoomBookingSysytem1.csproj
+++ b/RoomBookingSysytem1/RoomBookingSysytem1.csproj
@@ -158,6 +158,7 @@
     <Content Include="Content\images\C101.jpg" />
     <Content Include="Content\images\H101.jpg" />
     <Content Include="Content\images\H102.jpg" />
+    <Content Include="Content\SignUp.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
